Performing System.initPhase1() on VM start